apps/memos/helm-memos-source.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: memos
    labels:
      prometheus: scrape
